--- a/ZinekEngine.vcproj
+++ b/ZinekEngine.vcproj
@@ -375,6 +375,14 @@
 				>
 			</File>
 			<File
+				RelativePath=".\Source\Graphics\DirectionalLight.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Graphics\DirectionalLight.h"
+				>
+			</File>
+			<File
 				RelativePath=".\Source\Graphics\FixedMaterial.cpp"
 				>
 			</File>
@@ -427,7 +435,43 @@
 				>
 			</File>
 			<File
+				RelativePath=".\Source\Graphics\OmniProjectiveLight.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Graphics\OmniProjectiveLight.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Graphics\PointLight.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Graphics\PointLight.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Graphics\PostEffects.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Graphics\PostEffects.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Graphics\PostProcessor.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\Source\Graphics\PostProcessor.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Graphics\ProjectiveLight.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Graphics\ProjectiveLight.h"
 				>
 			</File>
 			<File
@@ -447,11 +491,75 @@
 				>
 			</File>
 			<File
+				RelativePath=".\Source\Graphics\ShadowRenderer.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Graphics\ShadowRenderer.h"
+				>
+			</File>
+			<File
 				RelativePath=".\Source\Graphics\Texture.cpp"
 				>
 			</File>
 			<File
 				RelativePath=".\Source\Graphics\Texture.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Graphics\Texture2D.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Graphics\Texture2D.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Graphics\Texture2DResource.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Graphics\Texture2DResource.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Graphics\Texture3D.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Graphics\Texture3D.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Graphics\Texture3DResource.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Graphics\Texture3DResource.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Graphics\TextureCube.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Graphics\TextureCube.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Graphics\TextureCubeResource.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Graphics\TextureCubeResource.h"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Graphics\TextureRenderer.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Source\Graphics\TextureRenderer.h"
 				>
 			</File>
 			<File
@@ -522,6 +630,22 @@
 					>
 				</File>
 				<File
+					RelativePath=".\Source\Graphics\Direct3D9\D3D9Module.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\Source\Graphics\Direct3D9\D3D9Module.h"
+					>
+				</File>
+				<File
+					RelativePath=".\Source\Graphics\Direct3D9\D3D9ModuleDescription.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\Source\Graphics\Direct3D9\D3D9ModuleDescription.h"
+					>
+				</File>
+				<File
 					RelativePath=".\Source\Graphics\Direct3D9\D3D9PostProcessor.cpp"
 					>
 				</File>
@@ -538,6 +662,14 @@
 					>
 				</File>
 				<File
+					RelativePath=".\Source\Graphics\Direct3D9\D3D9RendererBase.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\Source\Graphics\Direct3D9\D3D9RendererBase.h"
+					>
+				</File>
+				<File
 					RelativePath=".\Source\Graphics\Direct3D9\D3D9Shader.cpp"
 					>
 				</File>
@@ -546,11 +678,43 @@
 					>
 				</File>
 				<File
-					RelativePath=".\Source\Graphics\Direct3D9\D3D9Texture.cpp"
+					RelativePath=".\Source\Graphics\Direct3D9\D3D9ShadowRenderer.cpp"
 					>
 				</File>
 				<File
-					RelativePath=".\Source\Graphics\Direct3D9\D3D9Texture.h"
+					RelativePath=".\Source\Graphics\Direct3D9\D3D9ShadowRenderer.h"
+					>
+				</File>
+				<File
+					RelativePath=".\Source\Graphics\Direct3D9\D3D9Texture2D.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\Source\Graphics\Direct3D9\D3D9Texture2D.h"
+					>
+				</File>
+				<File
+					RelativePath=".\Source\Graphics\Direct3D9\D3D9Texture3D.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\Source\Graphics\Direct3D9\D3D9Texture3D.h"
+					>
+				</File>
+				<File
+					RelativePath=".\Source\Graphics\Direct3D9\D3D9TextureCube.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\Source\Graphics\Direct3D9\D3D9TextureCube.h"
+					>
+				</File>
+				<File
+					RelativePath=".\Source\Graphics\Direct3D9\D3D9TextureRenderer.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\Source\Graphics\Direct3D9\D3D9TextureRenderer.h"
 					>
 				</File>
 				<File
@@ -567,22 +731,6 @@
 				</File>
 				<File
 					RelativePath=".\Source\Graphics\Direct3D9\D3D9VertexDeclaration.h"
-					>
-				</File>
-				<File
-					RelativePath=".\Source\Graphics\Direct3D9\Direct3D9Module.cpp"
-					>
-				</File>
-				<File
-					RelativePath=".\Source\Graphics\Direct3D9\Direct3D9Module.h"
-					>
-				</File>
-				<File
-					RelativePath=".\Source\Graphics\Direct3D9\Direct3D9ModuleDescription.cpp"
-					>
-				</File>
-				<File
-					RelativePath=".\Source\Graphics\Direct3D9\Direct3D9ModuleDescription.h"
 					>
 				</File>
 				<Filter
@@ -720,10 +868,6 @@
 			</File>
 			<File
 				RelativePath=".\Source\Core\Option.h"
-				>
-			</File>
-			<File
-				RelativePath=".\Source\Core\Property.h"
 				>
 			</File>
 			<File
